<resources>
    <string name="mode">Day</string>
    <string name="app_name">Speak, Talk, Friends</string>
    <string name="et_username">Username</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="tv_login_headline">Sign in</string>
    <string name="tv_register_headline">Create Account</string>
    <string name="btn_register">REGISTER</string>
    <string name="tv_password_verification">Password Verification</string>
    <string name="et_confirm_password">Confirm Password</string>
    <string name="tv_display_name">Display Name</string>
    <string name="et_display_name">Display Name</string>
    <string name="et_ProfilePic">et_ProfilePic</string>
    <string name="et_picture">Picture</string>
    <string name="cd_top_circle">topCircle</string>
    <string name="cd_show_password">showPasswordImg</string>
    <string name="cd_bottom_circle">bottomCircle</string>
    <string name="cd_add_new_contact">addNewContact</string>
    <string name="ed_new_message_hint">New message here&#8230;</string>
    <string name="tv_add_new_contact_headline">Choose contact</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_dark_mode">Dark Mode</string>
    <string name="tv_change_api">Change API</string>
    <string name="tv_logout">Sign Out</string>
    <string name="tv_link_to_register_1">Not registered?</string>
    <string name="tv_link_to_register2"> Click here</string>
    <string name="tv_link_to_register3"> to register</string>
    <string name="tv_link_to_login1">Already registered?</string>
    <string name="tv_link_to_login2"> to login</string>
    <string name="et_choose_contact">Insert username&#8230;</string>
    <string name="tv_add_profile_picture">add profile picture</string>
    <string name="tv_change_api_headline">Change API</string>
    <string name="ed_insert_server_address">Insert server address&#8230;</string>
    <string name="btn_change">Change</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_continue">Continue</string>
    <string name="backImg">backImg</string>
    <string name="sendmessage">sendMessage</string>
    <string name="btnAdd">Add</string>
    <string name="settingImg">settingImg</string>
</resources>