<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".Register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SCREEN">

        <ImageView
            android:id="@+id/topCircle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/top_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="-50dp"
            android:contentDescription="@string/cd_top_circle"/>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            style="@style/BLOCK_SCREEN"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="2dp">

            <TextView
                android:id="@+id/tvRegisterHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_register_headline"
                style="@style/HEADLINE_TEXT"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:id="@+id/ll_ProfilePic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/fl_profilePic"
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="30dp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/riProfilePic"
                        style="@style/PROFILE_PIC_CIRCLE"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        app:riv_oval="true" />

                    <TextView
                        android:id="@+id/et_ProfilePic"
                        style="@style/TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_add_profile_picture" />

                </FrameLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_username"
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="30dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/tv_username"
                    style="@style/TEXT"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    style="@style/EDIT_TEXT"
                    android:drawableStart="@drawable/username_icon_drawable"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/et_username"
                    android:inputType="text"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="30dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/tv_password"
                    style="@style/TEXT"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        style="@style/EDIT_TEXT"
                        android:drawableStart="@drawable/password_icon_drawable"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:hint="@string/et_password"
                        android:inputType="textPassword"
                        android:minHeight="48dp" />

                    <ImageButton
                        android:id="@+id/btnShowPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:background="@android:color/transparent"
                        android:src="@drawable/show_password_icon_drawable"
                        android:contentDescription="@string/cd_show_password"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_passwordVerification"
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="30dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvPasswordVerification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/tv_password_verification"
                    style="@style/TEXT"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_passwordVerification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        style="@style/EDIT_TEXT"
                        android:drawableStart="@drawable/password_icon_drawable"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:hint="@string/et_confirm_password"
                        android:inputType="textPassword"
                        android:minHeight="48dp" />

                    <ImageButton
                        android:id="@+id/btnShowConfirmationPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:background="@android:color/transparent"
                        android:src="@drawable/show_password_icon_drawable"
                        android:contentDescription="@string/cd_show_password"/>
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_displayName"
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="30dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/tv_display_name"
                    style="@style/TEXT"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_displayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    style="@style/EDIT_TEXT"
                    android:drawableStart="@drawable/display_name_icon_drawable"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/et_display_name"
                    android:inputType="text"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/linkToLogin1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_link_to_login1"
                    android:textStyle="normal|bold"
                    style="@style/TEXT"/>
                <TextView
                    android:id="@+id/linkToLogin2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_link_to_register2"
                    android:textStyle="normal|bold"
                    style="@style/LINK_TO_TEXT"
                    android:layout_marginStart="3dp"/>
                <TextView
                    android:id="@+id/linkToLogin3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_link_to_login2"
                    android:textStyle="normal|bold"
                    android:layout_marginStart="3dp"
                    style="@style/TEXT"/>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                style="@style/BUTTON"
                android:gravity="center"
                android:text="@string/btn_register"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/bottomCircle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/bottom_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="-20dp"
            android:layout_marginStart="-50dp"
            android:contentDescription="@string/cd_bottom_circle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
