<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLoginHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_login_headline"
            android:gravity="center"
            android:textColor="#CADEED"
            android:textStyle="bold"
            android:textSize="40sp"
            android:fontFamily="@font/segoue_ui_bold_font"/>

        <LinearLayout
            android:layout_width="297dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="30dp">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoue_ui_bold_font"
                android:paddingBottom="5dp"
                android:text="@string/tv_username"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_username"
                android:inputType="text"
                android:minHeight="48dp"
                android:autofillHints="username"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/username_icon_drawable"
                android:drawablePadding="8dp"
                android:fontFamily="@font/segoe_ui_font"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="297dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="30dp">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/tv_password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/segoue_ui_bold_font"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:autofillHints="password"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/password_icon_drawable"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/segoe_ui_font"/>

                <ImageButton
                    android:id="@+id/btnShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:background="@android:color/transparent"
                    android:src="@drawable/show_password_icon_drawable" />
            </FrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_background"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textColor="#FFFFFF"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/segoe_ui_font"
            android:textSize="20sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>