<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    style="@style/STATUS_BAR"
    android:id="@+id/fullScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/STATUS_BAR"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnExitSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_exit" />

        <TextView
            android:id="@+id/tvHeadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/tv_settings"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        style="@style/BLOCK_SCREEN_WITH_STATUS_BAR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RelativeLayout
            android:id="@+id/llCurrentUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/currentUserImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                app:civ_border_color="@color/black" />

            <TextView
                android:id="@+id/tvCurrentUserDisplayName"
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/currentUserImg"
                android:layout_toRightOf="@id/currentUserImg"
                android:layout_alignTop="@id/currentUserImg"
                android:layout_alignBottom="@id/currentUserImg"
                android:layout_marginStart="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:id="@+id/llDarkMode">

                <ImageView
                    android:id="@+id/ivDarkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/dark_mode_icon_drawable" />

                <TextView
                    android:id="@+id/tvDarkMode"
                    style="@style/TEXT"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_dark_mode"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchDarkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:id="@+id/llChangeApi">

                <ImageView
                    android:id="@+id/ivChangeApi"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/change_api_icon_drawable" />

                <TextView
                    android:id="@+id/tvChangeApi"
                    style="@style/TEXT"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_change_api"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivChangeApi1"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/ic_open_setting" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:id="@+id/llLogout">

                <ImageView
                    android:id="@+id/ivLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/logout_icon_drawable" />

                <TextView
                    android:id="@+id/tvLogout"
                    style="@style/TEXT"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_logout"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivLogout1"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/ic_open_setting" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>